--- a/apps/web/src/app/app.html
+++ b/apps/web/src/app/app.html
@@ -3,12 +3,7 @@
 <div class="main-wrapper">
   <!-- HERO -->
   <header>
-    <div
-      class="photo-frame"
-      style="
-        background-image: url('https://images.unsplash.com/photo-1510333300281-7915573ca52c?q=80&w=400&auto=format&fit=crop');
-      "
-    ></div>
+    <div class="photo-frame"></div>
 
     <div class="hero-card">
       <h1>Princesse & Super-Héros 👑🕷️</h1>
