--- a/apps/web/src/app/app.html
+++ b/apps/web/src/app/app.html
@@ -186,6 +186,7 @@
   </section>
 
   <footer style="text-align: center; padding: 40px; color: #bbb; font-size: 0.8rem">
-    {{ t('footer') }}
+    {{ t('footer') }} - Build with ❤️ by
+    <a href="https://github.com/fanto237/birthdaySite" target="_blank">Papa</a>
   </footer>
 </div>
